--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "build": "react-scripts build",
     "electron-build": "electron-builder",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "node ./scripts/docker-build.js"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +61,7 @@
     "directories": {
       "output": "dist"
     },
+    "afterPack": "./scripts/afterPackHook.js",
     "files": [
       "build/**/*",
       "public/**/*",
